; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_spa_prop_get_set.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_spa_prop_get_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ztest_name_lock = common dso_local global i32 0, align 4
@ZPOOL_PROP_AUTOTRIM = common dso_local global i32 0, align 4
@ztest_spa = common dso_local global i32 0, align 4
@ztest_opts = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ztest_spa_prop_get_set(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %6 = call i32 @pthread_rwlock_rdlock(i32* @ztest_name_lock)
  %7 = load i32, i32* @ZPOOL_PROP_AUTOTRIM, align 4
  %8 = call i32 @ztest_random(i32 2)
  %9 = call i32 @ztest_spa_prop_set_uint64(i32 %7, i32 %8)
  %10 = load i32, i32* @ztest_spa, align 4
  %11 = call i32 @spa_prop_get(i32 %10, i32** %5)
  %12 = call i32 @VERIFY0(i32 %11)
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ztest_opts, i32 0, i32 0), align 4
  %14 = icmp sge i32 %13, 6
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @dump_nvlist(i32* %16, i32 4)
  br label %18

18:                                               ; preds = %15, %2
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @nvlist_free(i32* %19)
  %21 = call i32 @pthread_rwlock_unlock(i32* @ztest_name_lock)
  ret void
}

declare dso_local i32 @pthread_rwlock_rdlock(i32*) #1

declare dso_local i32 @ztest_spa_prop_set_uint64(i32, i32) #1

declare dso_local i32 @ztest_random(i32) #1

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @spa_prop_get(i32, i32**) #1

declare dso_local i32 @dump_nvlist(i32*, i32) #1

declare dso_local i32 @nvlist_free(i32*) #1

declare dso_local i32 @pthread_rwlock_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
